# yakuake

./: ChangeLog
app/: CMakeLists.txt  application.cpp  main.cpp  mainwindow.cpp  sessionstack.cpp  sessionstack.h
app/config/: autostartsettings.cpp  autostartsettings.h  autostartsettings.ui  common.cpp  common.h  connectionsettings.cpp  connectionsettings.h  preferences.cpp  preferences.h  sessioneditdialog.cpp  sessioneditdialog.h  sessioneditdialog.ui  sessionlistview.cpp  sessionlistview.h  sessionsettings.cpp  sessionsettings.h  terminaleditdialog.ui  terminalsettings.cpp  terminalsettings.h  yakuake.kcfg
